# parking

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/accounts/: forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/templates/accounts/: login.html
src/home/: admin.py  forms.py  models.py  urls.py  views.py
src/home/migrations/: 0001_initial.py  0002_remove_payment_period_from_remove_payment_period_to.py  0003_alter_parkinguser_plate.py  0004_alter_parkingspot_number.py  0005_remove_subscription_unique_active_subscription_per_spot_and_more.py  0006_alter_payment_subscription.py  0007_remove_payment_subscription_payment_user.py  0008_alter_payment_user.py
src/home/templates/home/: help.html  index.html  spots.html  user_detail.html  users.html
src/home/templates/home/partials/: create_payment_form.html  create_spot_form.html  create_subscription_form.html  create_user_form.html  edit_payment_form.html  edit_spot_form.html  edit_subscription_form.html  edit_user_form.html  pricing_config_card.html  pricing_config_form.html  spot_list.html  user_list.html
src/home/templatetags/: serbian_plural.py
src/parking/: asgi.py  settings.py  urls.py  wsgi.py
src/static/tw/: input.css
src/templates/: base.html  base_main.html
